--- a/gaming.html
+++ b/gaming.html
@@ -55,9 +55,7 @@ background-color: #f9f0ed;
 border: 1px dotted #e2d5d0;
 }
 #linkbjinho { color: #bca7a7; padding-bottom: 2px; border-bottom:1px dotted #c6a799; }
-#linkzinho { padding-bottom: 2px; border-bottom:1px dotted #c6a799; }
-
-</style>
+#linkzinho { padding-bottom: 2px; border-bottom:1px dotted #c6a799; }</style>
 
 <!--
 tooooooooltip
@@ -272,9 +270,7 @@ z-index: 3;
 <img src="https://i.imgur.com/Jm86w3I.png"/>
 
 <div onselectstart="return false" id="menu1">
-<p style="font-size:10px;line-height:50%;"><br><br>
-
-　　　　<font color="#c6a799">ణ</font>　<a href="/about" style="text-decoration: none; color:#a3948d;">about</a><br><br><br>
+<p style="font-size:10px;line-height:50%;"><br><br>　　　　<font color="#c6a799">ణ</font>　<a href="/about" style="text-decoration: none; color:#a3948d;">about</a><br><br><br>
 　　　　<font color="#c6a799">ణ</font>　<a href="/links" style="text-decoration: none; color:#a3948d;">links</a><br><br><br>
 　　　　<font color="#c6a799">ణ</font>　<a href="/contact" style="text-decoration: none; color:#a3948d;">contact</a><br><br><br>
 　　　　<font color="#c6a799">ణ</font>　<a href="/credits" style="text-decoration: none; color:#a3948d;">credits</a><br><br><br>
@@ -632,7 +628,7 @@ p { margin: 0; }
 <div id="spoiler4" class="spoiler-area is-closed4">
 <!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
 <br>
-<img width="350px" height="auto" src="https://i.imgur.com/ew0VVCI.png"/>
+<img width="350px" height="auto" src="https://i.imgur.com/O14Ujt2.png"/>
 <br><br>
 </div><!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
 <style>
@@ -925,7 +921,7 @@ p { margin: 0; }
 <sub><sub><img width="28px" height="auto" src="https://i.imgur.com/nX9OFvm.gif"></sub></sub>
 <font color="#a37a7a">　<b>love nikki</b>　<font style="font-size:9px">♡</font></font><br><br>
 　　　<sub><sub><img src="https://i.imgur.com/v3VaYjZ.gif"></sub></sub>　
-<a id="linkbjinho" style="text-decoration:none; color:#af8c8c;" data-target="spoiler9" class="btn-spoiler9">home</a>
+<a id="linkbjinho" style="text-decoration:none; color:#af8c8c;" data-target="spoiler9" class="btn-spoiler9">me and my home</a>
 
 
 <center>
@@ -933,7 +929,9 @@ p { margin: 0; }
 <div id="spoiler9" class="spoiler-area is-closed9">
 <!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
 <br>
-<img width="300px" height="auto" src="https://i.imgur.com/oROc4FR.png"/>
+<img width="250px" height="auto" src="https://i.imgur.com/2rGcHuv.png"/>
+<br><br>
+<img width="300px" height="auto" src="https://i.imgur.com/POjQiSO.png"/>
 <br><br>
 </div><!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
 <style>
@@ -956,11 +954,11 @@ p { margin: 0; }
     loop($btns, function($btn){
         $btn.addEventListener("click", function(){
             var $spoiler = document.getElementById(this.getAttribute("data-target"));
-            if( this.innerHTML === "home" ){
-                this.innerHTML = "home ˣ";
+            if( this.innerHTML === "me and my home" ){
+                this.innerHTML = "me and my home ˣ";
                 $spoiler.classList.remove("is-closed9");
             } else {
-                this.innerHTML = "home";
+                this.innerHTML = "me and my home";
                 $spoiler.classList.add("is-closed9");
             }
         });
@@ -1208,6 +1206,14 @@ p { margin: 0; }
 
 
 </center>
+
+<br><br><br><br>
+
+<sub><sub><img width="28px" height="auto" src="https://i.imgur.com/nX9OFvm.gif"></sub></sub>
+<font color="#a37a7a">　<b>momo's dressup</b>　<font style="font-size:9px">♡</font></font><br><br>
+　　　<sub><sub><img src="https://i.imgur.com/h01NXXS.gif"></sub></sub>　
+<a id="linkbjinho" style="text-decoration:none;" href="https://photos.app.goo.gl/Fgn4RbAYw1nx7tXY9" target="_blank">
+<font color="#af8c8c">me</font></a>
 
 <br><br><br><br>
 
