--- a/gaming.html
+++ b/gaming.html
@@ -929,7 +929,7 @@ p { margin: 0; }
 <div id="spoiler9" class="spoiler-area is-closed9">
 <!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
 <br>
-<img width="250px" height="auto" src="https://i.imgur.com/2rGcHuv.png"/>
+<img width="250px" height="auto" src="https://i.imgur.com/2Nnk3a9.png"/>
 <br><br>
 <img width="300px" height="auto" src="https://i.imgur.com/POjQiSO.png"/>
 <br><br>
