--- a/recommended.html
+++ b/recommended.html
@@ -312,7 +312,15 @@ z-index: 3;
 <font style="font-size:5px" color="#d8c0ad">.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.</font><br><br>
 <br><br><br>
 
-　<a href="https://lovelyxdoll.blogspot.com/" target="_blank"><img src="https://i.imgur.com/KDfAyiF.png"></a>
+<a href="https://web.archive.org/web/20120106190018/http://makipooh.chu.jp/apupu/top.html" target="_blank"><img src="https://i.imgur.com/MPQdxyU.gif"></a>
+　<a href="https://farinawvence.blogspot.com" target="_blank"><img src="https://i.imgur.com/Ex531VA.gif"></a>
+　<a href="https://cappuyeon.blogspot.com" target="_blank"><img src="https://i.imgur.com/oKrXeSb.gif"></a>
+
+　　<br><br><a href="https://mimi-dollie.blogspot.com" target="_blank"><img src="https://i.imgur.com/BCGhvCY.gif"></a>
+　<a href="https://www.aniblog.com.mx" target="_blank"><img src="https://i.imgur.com/TYCJqcI.gif"></a>
+　<a href="https://woneland.blogspot.com" target="_blank"><img src="https://i.imgur.com/41vCABt.gif"></a>
+
+　<br><br><a href="https://lovelyxdoll.blogspot.com/" target="_blank"><img src="https://i.imgur.com/KDfAyiF.png"></a>
 　<a href="https://web.archive.org/web/20121020180143/http://cheerful.hacca.jp/" target="_blank"><img src="https://i.imgur.com/m4UM3W1.gif"></a>
 　<a href="https://web.archive.org/web/20130517212125/http://susuda.skr.jp/" target="_blank"><img src="https://i.imgur.com/nmVTFnS.gif"></a>
 
@@ -350,7 +358,7 @@ z-index: 3;
 
 　<br><br><a href="https://web.archive.org/web/20101120155824/http://cuty-make.info/framepage.html" target="_blank"><img src="https://i.imgur.com/RSzIZtu.gif"></a>
 　<a href="https://web.archive.org/web/20100923153817/http://sao-charin.babymilk.jp:80/charin/mainpage.html" target="_blank"><img src="https://i.imgur.com/AJOC34r.gif"></a>
-　<a href="https://web.archive.org/web/20100828110122/http://fm-fragment.girly.jp:80/" target="_blank"><img src="https://i.imgur.com/hwEyio3.gif"></a>
+　<a href="https://web.archive.org/web/20080428131528/http://fm-fragment.girly.jp/" target="_blank"><img src="https://i.imgur.com/hwEyio3.gif"></a>
 
 　<br><br><a href="http://ichigoaporo.jp/" target="_blank"><img src="https://i.imgur.com/3OsWP3e.gif"></a>
 　<a href="https://web.archive.org/web/20100823031436/http://engel.websozai.jp:80/" target="_blank"><img src="https://i.imgur.com/jNtEpEd.gif"></a>
