--- a/tinyjournal.html
+++ b/tinyjournal.html
@@ -316,6 +316,29 @@ welcome to the place where imagination and reality are mixed together !! i hope 
 <br><br>
 
 <div style="text-align:left">
+<center><font color="#a8947c">
+<img src="https://i.imgur.com/0QvTpoL.png"><br><br>
+october . 03 . 2019<br>
+✄ the biggest little girl
+</font>
+</center>
+<font color="#c1ae99">
+<br><br>
+
+　　Once upon a time there was a little girl with a big head and a small body who loved cats.<br>
+　　She felt enormously tiny, super gigantly small. Because of that, she always wondered "Am I too big for this ...?" and hid under the blankets.<br>
+　　She was talking to kittens under the table, and they said she's too big to fit in there, even though she was already there.<br>
+　　Good thing the little girl was quite happy anyway! She ignored all the rude little critters, who were her best and kindest friends.<br>
+　　Moral of the story: If you feel minusculy large or gigantly tiny, you are probably medium.
+<br><br>
+<center>E N D</center>
+</font>
+
+<br><br><br>
+<center><font color="#b7aba8">- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -</center>
+<br><br><br>
+
+<div style="text-align:left">
 <center><font color="#aab0b7">
 <img src="https://i.imgur.com/i7IJQbR.png"><br><br>
 august . 08 . 2019<br>
@@ -436,30 +459,6 @@ november . 29 . 2018<br>
 <center><font color="#b7aba8">- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -</center>
 <br><br><br>
 
-<div style="text-align:left">
-<center><font color="#aab0b7">
-<img src="https://i.imgur.com/i7IJQbR.png"><br><br>
-october . 10 . 2018<br>
-✄ be soft
-</font>
-</center><font color="#bfc4c9">
-<br>
-　　very important reminder :<br>
-　　i must be soft<br>
-　　everytime, anytime<br>
-　　everywhere, anywhere<br><br>
-
-　　soft = comfy<br>
-　　soft = pure<br>
-　　soft = ♡♡♡<br>
-　　soft = myself !!!<br><br>
-</font>
-
-
-
-<br><br><br>
-<center><font color="#b7aba8">- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -</center>
-<br>
 
 </div>
 </div>
