--- a/status.html
+++ b/status.html
@@ -322,6 +322,9 @@ z-index: 3;
 <div style="padding-left: 163px; padding-top: 130px;">
 <div style="padding: 2px; position: absolute; font-family: Verdana; font-size:10px; width: 270px; height: 120px; overflow-x: hidden; z-index: 30; text-align:justify; line-height: 100%">
 
+　<sub><img src="https://i.imgur.com/9LP84Nr.gif"></sub> <font color="#b7cccc" style="border-bottom:1px dashed #d8c0ad;"><sup>10.12.19</sup></font> <font color="#9cb7b7">→</font>　2020 is a neat number isn't it ?
+
+<br><br><br>
 　<sub><img src="https://i.imgur.com/YQRQHJd.gif"></sub> <font color="#f2c6c6" style="border-bottom:1px dashed #d8c0ad;"><sup>20.11.19</sup></font> <font color="#d8abab">→</font>　*hiding in a parallel dimension*
 
 <br><br><br>
@@ -348,8 +351,6 @@ z-index: 3;
 <br><br><br>
 　<sub><img src="https://i.imgur.com/UvUc3xP.gif"></sub> <font color="#c9d5e5" style="border-bottom:1px dashed #d8c0ad;"><sup>04.07.19</sup></font> <font color="#a0acbc">→</font>　dreaming under many blankies
 
-<br><br><br>
-　<sub><img src="https://i.imgur.com/9LP84Nr.gif"></sub> <font color="#b7cccc" style="border-bottom:1px dashed #d8c0ad;"><sup>08.06.19</sup></font> <font color="#9cb7b7">→</font>　it's never too late for restarting..
 
 
 </div>
