--- a/fashion.html
+++ b/fashion.html
@@ -333,6 +333,11 @@ p { margin: 0; }
 <center>
 
 <br><br><br>
+<font color="#877b71"><sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub> 12.10.19 <sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub></font><br><br>
+<img width="280px" height="auto" src="https://i.imgur.com/egwFwwo.png"/><br>
+<br>
+
+<br><br><br>
 <font color="#877b71"><sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub> 11.08.19 <sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub></font><br><br>
 <img width="280px" height="auto" src="https://i.imgur.com/kMqhFzv.png"/><br>
 <br>
@@ -378,11 +383,6 @@ p { margin: 0; }
 <br><br>
 <font color="#877b71"><sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub> 11.08.18 <sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub></font><br><br>
 <img width="280px" height="auto" src="https://i.imgur.com/DxXQre8.png"/><br>
-<br>
-
-<br><br><br>
-<font color="#877b71"><sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub> 09.19.18 <sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub></font><br><br>
-<img width="280px" height="auto" src="https://i.imgur.com/ruYaJgs.png"/><br>
 <br>
 
 
