--- a/status.html
+++ b/status.html
@@ -329,7 +329,7 @@ z-index: 3;
 <br>　<font color="#a59990" style="border-bottom:1px dashed #d8c0ad; padding-bottom: 1px; font-size:8px;">feeling</font> : <font color="#d8b1b1" style="border-bottom:1px dashed #d8c0ad; padding-bottom: 1px; font-size:9px;">sleepy</font>‌ ‌ ‌<sub><sub><img src="https://i.imgur.com/WMKsOT0.gif"></sub></sub>
 <br><br>
 　<font color="#a59990" style="border-bottom:1px dashed #d8c0ad; padding-bottom: 1px; font-size:8px;">working on</font> : <font color="#d8b1b1" style="border-bottom:1px dashed #d8c0ad; padding-bottom: 1px; font-size:9px;">art for little game</font><br><br>
-　　　　　　‌‌‌‌‌<font color="#d8b1b1" style="border-bottom:1px dashed #d8c0ad; padding-bottom: 1px; font-size:9px;">writing poetry</font><br><br>
+　　　　　　‌‌‌‌‌<font color="#d8b1b1" style="border-bottom:1px dashed #d8c0ad; padding-bottom: 1px; font-size:9px;">aesthetic collages</font><br><br>
 </div>
 
 
@@ -337,6 +337,9 @@ z-index: 3;
 <div style="padding-left: 163px; padding-top: 130px;">
 <div style="padding: 2px; position: absolute; font-family: Verdana; font-size:10px; width: 270px; height: 120px; overflow-x: hidden; z-index: 30; text-align:justify; line-height: 100%">
 
+　<sub><img src="https://i.imgur.com/UvUc3xP.gif"></sub> <font color="#c9d5e5" style="border-bottom:1px dashed #d8c0ad;"><sup>24.05.20</sup></font> <font color="#a0acbc">→</font>　loving him forever & ever
+
+<br><br><br>
 　<sub><img src="https://i.imgur.com/9LP84Nr.gif"></sub> <font color="#b7cccc" style="border-bottom:1px dashed #d8c0ad;"><sup>16.05.20</sup></font> <font color="#9cb7b7">→</font>　i want cake, i need cake
 
 <br><br><br>
@@ -362,9 +365,6 @@ z-index: 3;
 
 <br><br><br>
 　<sub><img src="https://i.imgur.com/8j82Hn6.gif"></sub> <font color="#e0a6a6" style="border-bottom:1px dashed #d8c0ad;"><sup>16.01.20</sup></font> <font color="#c48d8d">→</font>　i am his ♡
-
-<br><br><br>
-　<sub><img src="https://i.imgur.com/UvUc3xP.gif"></sub> <font color="#c9d5e5" style="border-bottom:1px dashed #d8c0ad;"><sup>02.01.20</sup></font> <font color="#a0acbc">→</font>　squeeze me softly
 
 
 </div>
