--- a/archive.html
+++ b/archive.html
@@ -321,6 +321,87 @@ font-family: Verdana;">
 
 <br>
 
+<center><img src="https://i.imgur.com/QIVUnsq.png"/><img src="https://i.imgur.com/QIVUnsq.png"/><img src="https://i.imgur.com/QIVUnsq.png"/><img src="https://i.imgur.com/QIVUnsq.png"/><img src="https://i.imgur.com/QIVUnsq.png"/></center>
+<br><br>
+<font size = 1><font color="#CBBBB1">
+<center>april . 16 . 2020</center>
+</font></font></font>
+<font size = 1><font color="#B1A69E">
+<br>
+hiii fluffies <sub><sub><img src="https://i.imgur.com/f4k2YxS.gif"/></sub></sub><br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+my last post was very boring but this one will have a lot of content.... next one will be full of stuff too ( mainly digital because my crafting & sewing materials are still inside boxes until the end of the quarantine )
+so let's get started <sub><sub><img src="https://i.imgur.com/AuDUzO4.gif"/></sub></sub>
+i made this little win95 desktop simulation for studying div and button behavior.. !
+take a look at <a id="linkbjinho" href="https://1997.pooftie.me" target="_blank">1997.pooftie.me</a>, specially if you like webcore : </pre>
+<br><br>
+
+<center><img width="410px" height="auto" src="https://i.imgur.com/8coUy8X.gif"/></center>
+<br><br>
+<center><sub><sub><img src="https://i.imgur.com/RUdU6ZM.gif"/></sub></sub>　<a href="https://file.pooftie.me/a/8AM.mp3" target="_blank"><font color="#d3a5a5" style="border-bottom:1px dashed #d3c1b1; padding-bottom: 2px; font-size:10px;">8AM .mp3</font></a>　
+</center><br>
+
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+it turned out super cute and i'm really proud <font color="#d3a5a5" style="font-size:11px;">♡♡</font>
+there are some adorable graphics i edited from ragnarok online ( the solace gif on the top right is my personal favorite <font color="#bda4a4" style="font-size:8px;background-color:#fceded;letter-spacing:1px;border-radius: 10px;box-shadow: 0 0 5px #fceded;">///</font> )
+this little music right there is an edit i did with "party night" from di gi charat, one of my favorite anime from my childhood ! do you like it ?
+as you may know i'm really bad with javascript coding but i'm trying to make different stuff lately for making html games in the near future.
+
+i was thinking about my flash games, since all swf files will stop working on browser by the end of this year.. i am trying to save as many swf as i can as a flash game collector, and many other people are working hard for not letting flash die completely.
+flash can be played at pc on specific softwares, that work on pretty much any computer. i wanted to convert my flash games into html, but i honestly think keeping my games as swf will be a motivation for people trying to find other flash games and animations !
+i know just a few people will actually download my games and the software for playing them, but i will be happy if i can inspire even 1 person to play those games that made my childhood so happy <sub><sub><img src="https://i.imgur.com/og4DZFE.gif"/></sub></sub>
+there are an infinity of games that are incredibly fun and cute, that will be forever flash games and will be forgotten if people just pretend flash didn't exist.. i feel that it's my responsibility as a game designer to not adapt swf into html, in respect to the artists that inspired me in first place.
+so i made my old games downloadable, and will make new games with html from now on <font color="#d3a5a5" style="font-size:11px;">♡</font>
+i fixed some issues with some very old ones and remade the visuals of my drawing tool :</pre><br>
+<br>
+<center><img width="360px" height="auto" src="https://i.imgur.com/MvjM0Rx.png"/></center>
+<br>
+
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+isn't it adorable ? i made puf bunny there mixing different colors with the "alpha" option <font color="#d3a5a5" style="font-size:11px;">♡</font>
+please make sure to download my flash games <a id="linkbjinho" href="/milkywoods" target="_blank">here</a> and send me your drawings !
+keep an eye open because i'm planning on coming back next post with some html games, i'm very excited for this new content !!
+a little spoiler of what is coming ..</pre><br>
+
+<center><img width="220px" height="auto" src="https://i.imgur.com/yl6FcGv.png"/></center>
+
+
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+i'm making cute art using 3D brush, a new style for working with from now on !
+what do you think ? <font color="#d3a5a5" style="font-size:11px;">♡</font>
+
+i have been very productive lately ( maybe because i'm bored with the quarantine heh ) so i also made another html page, one i have been struggling to make for the longest time... but bubu helped me !!!
+<a id="linkbjinho" href="https://tea.pooftie.me" target="_blank">tea.pooftie.me</a> is an weather website where you can check if it's the right time to have a tea party or not :</pre><br>
+<br>
+<center><img width="410px" height="auto" src="https://i.imgur.com/sdjKr0J.gif"/></center>
+<br><br>
+
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+it's very random but it's nice having my own cute weather website, and i kind of learned how to deal with apis too <sub><sub><img src="https://i.imgur.com/fyXH0Lg.gif"/></sub></sub>
+that's it for today, i hope you're having a lovely time.. stay safe <font color="#d3a5a5" style="font-size:11px;">♡</font></pre><br>
+xoxo <sub><sub><img src="https://i.imgur.com/psrOEBE.png"/></sub></sub></pre>
+<br><br>
+</font></font></font>
+
+<br>
+
+<center><img src="https://i.imgur.com/kucLPar.png"/><img src="https://i.imgur.com/kucLPar.png"/><img src="https://i.imgur.com/kucLPar.png"/><img src="https://i.imgur.com/kucLPar.png"/><img src="https://i.imgur.com/kucLPar.png"/></center>
+
+<br><br><br>
+
+<br>
+
 <center><img src="https://i.imgur.com/O0cIJmZ.png"/></center>
 <br><br>
 <font size = 1><font color="#CBBBB1">
