--- a/portfolio.html
+++ b/portfolio.html
@@ -343,10 +343,10 @@ z-index: 3;
 
 <br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> digital painting<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br>
 <br>
+<img width="300px" height="auto" src="https://i.imgur.com/PLAqbSa.png"><br><br>
 <img width="350px" height="auto" src="https://i.imgur.com/bMMexej.png"><br><br>
 <img width="300px" height="auto" src="https://i.imgur.com/w5BQZ4h.png"><br><br>
 <img width="300px" height="auto" src="https://i.imgur.com/gInirWP.png"><br><br>
-<img width="300px" height="auto" src="https://i.imgur.com/zqHB2w1.png"><br><br>
 <img width="350px" height="auto" src="https://i.imgur.com/HZseZ4b.png">
 <br><br><br><br>
 <img src="https://i.imgur.com/NC62NZP.gif"></center></font>
@@ -405,6 +405,7 @@ z-index: 3;
 
 
 <br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> pc & phone customization<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br></font><br><br>
+<img width="400px" height="auto" src="https://i.imgur.com/ubcAKg9.gif"><br><br>
 <img width="400px" height="auto" src="https://i.imgur.com/sFC4LuS.gif"><br><br>
 <img width="220px" height="auto" src="https://i.imgur.com/FB1yE5M.png"><br><br>
 <img width="220px" height="auto" src="https://i.imgur.com/6QZX0tS.png"><br><br>
