--- a/fashion.html
+++ b/fashion.html
@@ -344,6 +344,11 @@ p { margin: 0; }
 
 
 <br><br>
+<font color="#877b71"><sub><img width="15" height="auto" src="https://i.imgur.com/ceWeVku.png"/></sub> 08.07.20 <sub><img width="15" height="auto" src="https://i.imgur.com/ceWeVku.png"/></sub></font><br><br>
+<img width="280px" height="auto" src="https://i.imgur.com/H6swcGe.png"/><br>
+<br>
+
+<br><br><br>
 <font color="#877b71"><sub><img width="15" height="auto" src="https://i.imgur.com/ceWeVku.png"/></sub> 07.02.20 <sub><img width="15" height="auto" src="https://i.imgur.com/ceWeVku.png"/></sub></font><br><br>
 <img width="280px" height="auto" src="https://i.imgur.com/nOZImYH.png"/><br>
 <br>
@@ -393,10 +398,6 @@ p { margin: 0; }
 <img width="280px" height="auto" src="https://i.imgur.com/MdMNapR.png"/><br>
 <br>
 
-<br><br><br>
-<font color="#877b71"><sub><img width="15" height="auto" src="https://i.imgur.com/ceWeVku.png"/></sub> 09.26.19 <sub><img width="15" height="auto" src="https://i.imgur.com/ceWeVku.png"/></sub></font><br><br>
-<img width="280px" height="auto" src="https://i.imgur.com/wTPiJOy.png"/><br>
-<br>
 
 
 
